changes to master

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>testElephant.TC_Elephant.TC009<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Verify Claims</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC007<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Edit Maling Address</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC001<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>$10 Payment - Saved Card</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC004<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Add new payment Method - ACH</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC002<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validate OneTimePayment_New Credit Card</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC005<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Add new payment Method - Credit Card</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC008<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Edit Garaging Address</i></td></tr>
+<tr><td>testElephant.TC_Elephant.TC003<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Validate OneTimePayment_New ACH/Bank Account</i></td></tr>
 </table>
