--- a/test-output/index.html
+++ b/test-output/index.html
@@ -47,13 +47,13 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" class="navigator-link " panel-name="testApparent-xml-Suite">
-                    <span>E:\ADMIRAL\Automation\Quotes\testng.xml</span>
+                  <a href="#" class="navigator-link " panel-name="test-xml-Suite">
+                    <span>C:\WorkSpace\CSP\Smoke.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Suite">
-                    <span class="testApparent-stats">1 testApparent</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="testApparent.TC" hash-for-method="TC001">TC001</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="testElephant.TC_Elephant" hash-for-method="TC009(QA6)">TC009(QA6)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -119,24 +119,25 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testApparent.TC</span>
+              <span class="class-name">testElephant.TC_Elephant</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC001">
-                  </a> <!-- TC001 -->
-                  <span class="method-name">TC001</span>
+                  <a name="TC009(QA6)">
+                  </a> <!-- TC009(QA6) -->
+                  <span class="method-name">TC009</span>
+                  <span class="parameters">(QA6)</span>
                   <em>
-(1D1V-Quote)                  </em>
+(Verify Claims)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
-        <div panel-name="testApparent-xml-Suite" class="panel">
+        <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\ADMIRAL\Automation\Quotes\testng.xml</span>
+            <span class="header-content">C:\WorkSpace\CSP\Smoke.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,13 +146,13 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;testNGListners.ITestAnnotation&quot;/&gt;
-    &lt;listener class-name=&quot;testNGListners.ITestTransform&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;testApparent name=&quot;testApparent&quot;&gt;
+  &lt;test name=&quot;testElephant&quot;&gt;
+    &lt;parameter name=&quot;ENV&quot; value=&quot;QA6&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testApparent.TC&quot;/&gt;
+      &lt;class name=&quot;testElephant.TC_Elephant&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/testApparent&gt; &lt;!-- testApparent --&gt;
+  &lt;/test&gt; &lt;!-- testElephant --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -163,7 +164,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="testApparent-name">testApparent (1 class)</span>
+                <span class="test-name">testElephant (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -182,21 +183,21 @@
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-                  suiteTableInitFunctions.push('tableData_Suite');
-                  function tableData_Suite() {
-                  var data = new google.visualization.DataTable();
-                  data.addColumn('number', 'Number');
-                  data.addColumn('string', 'Method');
-                  data.addColumn('string', 'Class');
-                  data.addColumn('number', 'Time (ms)');
-                  data.addRows(1);
-                  data.setCell(0, 0, 0)
-                  data.setCell(0, 1, 'TC001')
-                  data.setCell(0, 2, 'testApparent.TC')
-                  data.setCell(0, 3, 76532);
-                  window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
-                  return data;
-                  }
+suiteTableInitFunctions.push('tableData_Suite');
+function tableData_Suite() {
+var data = new google.visualization.DataTable();
+data.addColumn('number', 'Number');
+data.addColumn('string', 'Method');
+data.addColumn('string', 'Class');
+data.addColumn('number', 'Time (ms)');
+data.addRows(1);
+data.setCell(0, 0, 0)
+data.setCell(0, 1, 'TC009')
+data.setCell(0, 2, 'testElephant.TC_Elephant')
+data.setCell(0, 3, 60385);
+window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
+return data;
+}
               </script>
               <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
@@ -213,9 +214,30 @@
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">8 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">testElephant.TC_Elephant</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">TC007</span>
+                <br/>
+                <span class="ignored-method-name">TC001</span>
+                <br/>
+                <span class="ignored-method-name">TC004</span>
+                <br/>
+                <span class="ignored-method-name">TC002</span>
+                <br/>
+                <span class="ignored-method-name">TC005</span>
+                <br/>
+                <span class="ignored-method-name">TC008</span>
+                <br/>
+                <span class="ignored-method-name">TC003</span>
+                <br/>
+                <span class="ignored-method-name">TC006</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -224,27 +246,15 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testApparent.TC</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testElephant.TC_Elephant</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">openBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">22935 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="testApparent-method">
-                <span class="method-name">TC001</span>
-                <span class="method-start">22935 ms</span>
-              </div> <!-- testApparent-method -->
-              <div class="configuration-method after">
-                <span class="method-name">goToHomePage</span>
-                <span class="method-start">99840 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-suite after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">109996 ms</span>
-              </div> <!-- configuration-suite after -->
+              <div class="test-method">
+                <span class="method-name">TC009(QA6)</span>
+                <span class="method-start">107 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
