--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="939fd1">  <td>20/06/30 16:08:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC009(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC009</td> 
+<tr bgcolor="657fd0">  <td>20/07/15 22:47:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC006(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC006</td> 
   <td>main@230835489</td>   <td></td> </tr>
-<tr bgcolor="939fd1">  <td>20/06/30 16:08:29</td>   <td>-102</td> <td title="&gt;&gt;TC_Elephant.openBrowser()[pri:0, instance:testElephant.TC_Elephant@5f341870]">&gt;&gt;openBrowser</td> 
+<tr bgcolor="657fd0">  <td>20/07/15 22:50:46</td>   <td>225989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC007(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC007</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/07/15 22:55:32</td>   <td>512487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC008(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC008</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/07/15 22:59:43</td>   <td>763057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC009(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC009</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/07/15 23:02:11</td>   <td>911078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC010(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC010</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/07/15 23:08:14</td>   <td>1274432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Elephant.TC011(java.lang.String)[pri:5, instance:testElephant.TC_Elephant@5f341870]">TC011</td> 
+  <td>main@230835489</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/07/15 22:47:00</td>   <td>-45</td> <td title="&gt;&gt;TC_Elephant.openBrowser()[pri:0, instance:testElephant.TC_Elephant@5f341870]">&gt;&gt;openBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@230835489</td>   <td></td> </tr>
 </table>
